--- a/app/views/devise/registrations/new_credit_card.html.haml
+++ b/app/views/devise/registrations/new_credit_card.html.haml
@@ -23,7 +23,8 @@
   .cmain
     %section.cmain__box
       %h2.cmain__box__upper 支払い方法
-      = form_with model: @credit_card ,url: {controller: 'registrations', action: 'create_credit_card' }, class: "cmain__box__form",local:true do |f|
+      -# = form_with model: @credit_card ,url: {controller: 'registrations', action: 'create_credit_card'},  class: "cmain__box__form",local:true do |f|
+      = form_for @credit_card, url: credit_cards_path,method: :post,html: {id: 'charge-form', name: "inputForm"} do |f|
         .cmain__box__form__blank
           .cmain__box__form__blank__list
             %label.cmain__box__form__blank__list__label カード番号
@@ -42,11 +43,36 @@
             %label.cmain__box__form__limit__list__label 有効期限
             .cmain__box__form__limit__list__must 必須
           .cmain__box__form__limit__month
-            = f.select :month, [["01", 0],["02", 1],["03", 2],["04",3],["05",4],["06",5],["07",6],["08",7],["09",8],["10",9],["11",10],["12",11]],{},{class:"cmain__box__form__limit__month--form",id:"exp_month"}
+          %select#exp_month{name: "exp_month", type: "text"}
+            %option{value: "1"}01
+            %option{value: "2"}02
+            %option{value: "3"}03
+            %option{value: "4"}04
+            %option{value: "5"}05
+            %option{value: "6"}06
+            %option{value: "7"}07
+            %option{value: "8"}08
+            %option{value: "9"}09
+            %option{value: "10"}10
+            %option{value: "11"}11
+            %option{value: "12"}12
+            -# = f.select :exp_month, [["01", 0],["02", 1],["03", 2],["04",3],["05",4],["06",5],["07",6],["08",7],["09",8],["10",9],["11",10],["12",11]],{},{class:"cmain__box__form__limit__month--form",id:"exp_month"}
             = icon 'fa', 'chevron-down', class:"cmain__box__form__limit__month__icon"
             .cmain__box__form__limit__month__text 月
           .cmain__box__form__limit__year
-            = f.select :year, [["19", 0],["20", 1],["21", 2],["22",3],["23",4],["24",5],["25",6],["26",7],["27",8]],{},{class:"cmain__box__form__limit__year--form",id:"exp_year"}
+            %select#exp_year{name: "exp_year", type: "text"}
+              %option{value: "2019"}19
+              %option{value: "2020"}20
+              %option{value: "2021"}21
+              %option{value: "2022"}22
+              %option{value: "2023"}23
+              %option{value: "2024"}24
+              %option{value: "2025"}25
+              %option{value: "2026"}26
+              %option{value: "2027"}27
+              %option{value: "2028"}28
+              %option{value: "2029"}29
+            -# = f.select :exp_year, [["19", 0],["20", 1],["21", 2],["22",3],["23",4],["24",5],["25",6],["26",7],["27",8]],{},{class:"cmain__box__form__limit__year--form",id:"exp_year"}
             = icon 'fa', 'chevron-down', class:"cmain__box__form__limit__year__icon"
             .cmain__box__form__limit__year__text 年
         .cmain__box__form__sequrity
@@ -61,6 +87,7 @@
         %button.cmain__box__form__btn
           -# .cmain__box__form__btn__inside
           -#   次へ進む
+          #card_token
           = submit_tag "追加する", class: "cmain__box__form__btn__inside", id: "token_submit", type: 'button'
 
 
