--- a/app/assets/stylesheets/user_credit.scss
+++ b/app/assets/stylesheets/user_credit.scss
@@ -38,6 +38,9 @@
           }
         }
       }
+      &:hover {
+        opacity: 0.7;
+      }
     }
     &__regist {
       @include font14_u2_color;
