--- a/app/views/products/user_credit.html.haml
+++ b/app/views/products/user_credit.html.haml
@@ -1,11 +1,9 @@
 // メルカリ>マイページ>支払い方法のhaml クレジットカード編集
 
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
--# .u-main
--#   -# = render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
--#   .u-header
--#     - breadcrumb :user_credit
--#     = render "layouts/breadcrumbs"
+.u-main
+  - breadcrumb :user_credit
+  = render "layouts/breadcrumbs"
   .u-container
     .container-center
       = render 'user_sidebar'  # ユーザマイページのヘッダーの部分テンプレートの呼び出し
