--- a/app/views/products/user_page.html.haml
+++ b/app/views/products/user_page.html.haml
@@ -1,11 +1,9 @@
 -# ユーザマイページの右の部分 メルカリ>マイページ
 
--# = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
--# .u-main
--#   -# = render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
--#   .u-header
--#     - breadcrumb :user_page
--#     = render "layouts/breadcrumbs"
+= render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
+.u-main
+  - breadcrumb :user_page
+  = render "layouts/breadcrumbs"
   .u-container
     .container-center
       = render 'user_sidebar'  # ユーザマイページのサイドバーの部分テンプレートの呼び出し
