--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -48,14 +48,14 @@
             カテゴリー
           .exhibitcontent_main__third__right__top--required4
             必須
-        = f.select :category, [["---","---" ],["レディース", "レディース"],["メンズ", "メンズ"],["ベビー・キッズ","ベビー・キッズ"],[" インテリア・住まい・小物","インテリア・住まい・小物"],["本・音楽・ゲーム","本・音楽・ゲーム"],["おもちゃ・ホビー・グッズ","おもちゃ・ホビー・グッズ"],["コスメ・香水・美容","コスメ・香水・美容"],["家電・スマホ・カメラ","家電・スマホ・カメラ"],["スポーツ・レジャー","スポーツ・レジャー"],["ハンドメイド","ハンドメイド"],["チケット","チケット"],["自動車・オートバイ","自動車・オートバイ"],["その他","その他"]]
+        = f.select :category, [["---","---" ],["レディース", "レディース"],["メンズ", "メンズ"],["ベビー・キッズ","ベビー・キッズ"],["インテリア・住まい・小物","インテリア・住まい・小物"],["本・音楽・ゲーム","本・音楽・ゲーム"],["おもちゃ・ホビー・グッズ","おもちゃ・ホビー・グッズ"],["コスメ・香水・美容","コスメ・香水・美容"],["家電・スマホ・カメラ","家電・スマホ・カメラ"],["スポーツ・レジャー","スポーツ・レジャー"],["ハンドメイド","ハンドメイド"],["チケット","チケット"],["自動車・オートバイ","自動車・オートバイ"],["その他","その他"]]
         = icon 'fa', 'chevron-down', class: "exhibitcontent_main__third__right--icon"
         .exhibitcontent_main__third__right__bottom
           .exhibitcontent_main__third__right__bottom--status 
             商品の状態
           .exhibitcontent_main__third__right__bottom--required5
             必須
-        = f.select :condition, [["---", 0],["新品、未使用", 1],["未使用に近い", 2],["目立った傷や汚れなし",3],[" やや傷や汚れあり",4],["汚れや傷あり",5],["全体的に状態が悪い",6]]
+        = f.select :condition, [["---", "---"],["新品、未使用", "新品、未使用"],["未使用に近い", "未使用に近い"],["目立った傷や汚れなし","目立った傷や汚れなし"],["やや傷や汚れあり","やや傷や汚れあり"],["汚れや傷あり","汚れや傷あり"],["全体的に状態が悪い","全体的に状態が悪い"]]
         = icon 'fa', 'chevron-down', class: "exhibitcontent_main__third__right--icon2"
     .exhibitcontent_main__fourth
       .exhibitcontent_main__fourth__left
