--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -68,7 +68,7 @@
             配達料の負担
           .exhibitcontent_main__fourth__right__top--required6
             必須
-        = f.select :charge, [["---", 0],["送料込み（出品者負担）", 1],["着払い（購入者負担）", 2]]
+        = f.select :charge, [["---", "---"],["送料込み（出品者負担）", "送料込み（出品者負担）"],["着払い（購入者負担）", "着払い（購入者負担）"]]
         = icon 'fa', 'chevron-down', class: "exhibitcontent_main__fourth__right--icon3"
         .exhibitcontent_main__fourth__right__middle
           .exhibitcontent_main__fourth__right__middle--region
