change_column_day

--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -82,7 +82,7 @@
             発送までの日数
           .exhibitcontent_main__fourth__right__bottom--required8
             必須
-        = f.select :day, [["---", 0],["１〜2日で発送", 1],["２〜3日で発送", 2],["４〜7日で発送", 3]]
+        = f.select :day, [["---", "---"],["１〜2日で発送", "１〜2日で発送"],["２〜3日で発送", "２〜3日で発送"],["４〜7日で発送", "４〜7日で発送"]]
         = icon 'fa', 'chevron-down', class: "exhibitcontent_main__fourth__right--icon5"
     
     .exhibitcontent_main__fifth
