change_index_scss

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -183,6 +183,7 @@
                       align-items: center;
                       display: flex;
                       flex-direction: column-reverse;
+                      background-color: white;
                       margin: 0;
                       overflow: hidden;
                       z-index: 0;
@@ -206,7 +207,7 @@
                           border-radius: 0 14px 14px 0;
                           bottom: 8px;
                           color: #fff;
-                          display: flex;
+                          line-height: 28px;
                           display: inline-block;
                           font-size: 17px;
                           height: 28px;
