setting_breadcrumb_file_change

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,15 +11,15 @@
 @import "show";
 @import "buy_confirm";
 @import "guide";
-@import "notice";
+@import "p_transaction";
 @import "things_to_do";
 @import "like";
 @import "exhibiting";
 @import "transaction";
 @import "sale";
-@import "purchase_exhibit";
+@import "p_exhibiting";
 @import "purchase_transaction";
-@import "news";
+@import "p_soldout";
 @import "evaluation";
 @import "contact";
 @import "font-awesome-sprockets";
