--- a/app/assets/stylesheets/user_mypage.scss
+++ b/app/assets/stylesheets/user_mypage.scss
@@ -12,10 +12,14 @@
     &__list{
       color: #333333;
       font-size: 14px;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      font-weight: 600;
+      color: #333333;
     }
   }
   a{
-    color: #000;
+    color: #333333;
+    font-weight: 400;
   }
   .u-container{
     background-color: #F5F5F5;
