--- a/app/views/devise/registrations/index.html.haml
+++ b/app/views/devise/registrations/index.html.haml
@@ -10,16 +10,16 @@
       %h2 新規会員登録
       .cellphone__main__container__form
         .cellphone__main__container__form__inside
-          = link_to root_path,class: 'cellphone__main__container__form__inside__btn' do
-            = icon 'far', 'envelope', class:"cellphone__main__container__form__inside__btn__envelope"
+          = link_to new_user_registration_path, class: 'cellphone__main__container__form__inside__btn' do
+            = icon 'far', 'envelope', class:"cellphone__main__container__form__inside__btn__icon"
             -# %fa.far.fa-envelope
             メールアドレスで登録する
-          %button.cellphone__main__container__form__facebook
-            = icon 'fab', 'facebook-square', class:"cellphone__main__container__form__facebook__icon"
+          = link_to user_facebook_omniauth_authorize_path, class: 'cellphone__main__container__form__facebook' do
             Facebookで登録する
-          %button.cellphone__main__container__form__google
-            = icon 'fab', 'google', class:"cellphone__main__container__form__google__icon"
+            = icon 'fab', 'facebook-square', class:"cellphone__main__container__form__facebook__icon"
+          = link_to user_google_oauth2_omniauth_authorize_path, class: 'cellphone__main__container__form__google' do
             Googleで登録する
+            = icon 'fab', 'google', class:"cellphone__main__container__form__google__icon"
     
 
   .exhibitcontent_down
