--- a/app/assets/stylesheets/p_soldout.scss
+++ b/app/assets/stylesheets/p_soldout.scss
@@ -3,19 +3,31 @@
   .main{
     &__center{
       &--left2{
+        line-height: 72px;
+        font-size: 16px;
+        font-weight: 700;
         color: #333333;
+        font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
         background-color: #EEEEEE;
-        width : calc(100% / 3);
+        width: calc(100% / 3);
       }
       &--center2{
+        line-height: 72px;
+        font-size: 16px;
+        font-weight: 700;
         color: #333333;
+        font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
         background-color: #EEEEEE;
-        width : calc(100% / 3);
+        width: calc(100% / 3);
       }
       &--right2{
         border-top: 2px solid #ea352d;
         background-color: #ffffff;
+        line-height: 72px;
+        font-size: 16px;
+        font-weight: 700;
         color: #333333;
+        font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
         width : calc(100% / 3);
       }
     }
