--- a/app/assets/stylesheets/user_mypage.scss
+++ b/app/assets/stylesheets/user_mypage.scss
@@ -7,7 +7,7 @@
     position: relative;
     display: block;
     background-color: #ffffff;
-    padding: 16px 330px;
+    padding: 16px 0px 16px 140px;
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
     &__list{
       color: #333333;
