--- a/app/views/products/p_soldout.html.haml
+++ b/app/views/products/p_soldout.html.haml
@@ -18,10 +18,17 @@
               取引中
             = link_to "", class: "main__center--right2" do
               売却済み
-          .main__bottom
-            = image_tag "logo_gray.svg", class: "main__bottom--img", size: "100x100"
-            .main__bottom--text
-              売却済みの商品がありません
+          -if @products
+            - @products.each do |product|
+              .main__bottom
+                = image_tag "logo_gray.svg", class: "main__bottom--img", size: "100x100"
+                .main__bottom--text
+                  売却済みの商品がありません
+          - else
+            .main__bottom
+              = image_tag "logo_gray.svg", class: "main__bottom--img", size: "100x100"
+              .main__bottom--text
+                売却済みの商品がありません
         .foot
           = link_to "", class: "foot__left" do
             = icon('fas', 'angle-left', class: 'foot__left----text')
