--- a/app/views/devise/registrations/done.html.haml
+++ b/app/views/devise/registrations/done.html.haml
@@ -27,8 +27,9 @@
         .main__box__form__blank
           %p ありがとうございます。
           %p 会員登録が完了しました。
-          %button.main__box__form__blank__btn
-            メルカリを始める
+          = link_to root_path do
+            %button.main__box__form__blank__btn
+              メルカリを始める
 
 
 
