--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -69,7 +69,7 @@
                           %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                             ¥
                             =product.price
-                          -# = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
     .imain__main__product
       .imain__main__product__box
