--- a/app/views/products/p_exhibiting.html.haml
+++ b/app/views/products/p_exhibiting.html.haml
@@ -21,7 +21,7 @@
             - @products.each do |product|
               .item_content
                 .item_content__image
-                  -# = image_tag product.product_images[0].image.to_s,size:"100×100"
+                  = image_tag product.product_images[0].image.to_s,size:"100×100"
                 .item_content__right
                   .item_content__right--name
                     =product.name
