--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -624,6 +624,6 @@
             %i.fas.fa-check
               .icon-text__right やることリスト
         %li.mheader__main__bottom__right__list
-          = link_to root_path, class:"mheader__main__bottom__right__list__good" do
+          = link_to user_page_products_path, class:"mheader__main__bottom__right__list__good" do
             %i.far.fa-grin-stars
               .icon-text__right マイページ
