--- a/app/views/products/_user_sidebar.html.haml
+++ b/app/views/products/_user_sidebar.html.haml
@@ -71,6 +71,6 @@
     = link_to "", class: "setting-ul__list" do
       電話番号の確認
       = icon('fas', 'angle-right', class: 'setting-ul__list__icon')
-    = link_to "", class: "setting-ul__list" do
+    = link_to "/products/user_logout", class: "setting-ul__list" do
       ログアウト
       = icon('fas', 'angle-right', class: 'setting-ul__list__icon')
