--- a/app/views/products/user_logout.html.haml
+++ b/app/views/products/user_logout.html.haml
@@ -11,8 +11,7 @@
         .setting-logout
           .setting-logout__content
             %button.setting-logout__content__btn{type: "submit"}
-              ログアウト
-              = link_to ""
+              = link_to "ログアウト",destroy_user_session_path, method: :delete
 = render 'banner'  # 全体のバナーの部分テンプレートの呼び出し
 
 = render 'footer'  # 全体のフッターの部分テンプレートの呼び出し
