--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
 @import "buy_confirm";
 @import "guide";
 @import "p_transaction";
-@import "things_to_do";
+@import "edit";
 @import "like";
 @import "exhibiting";
 @import "transaction";
