--- a/app/assets/stylesheets/p_exhibiting.scss
+++ b/app/assets/stylesheets/p_exhibiting.scss
@@ -4,8 +4,8 @@
     width: calc(100vw - 620px);
     background: #fafafa;
     font-size: 16px;
-    line-height: 72px;
     &__top{
+      line-height: 72px;
       padding: 0px 16px;
       font-size: 16px;font-weight: 700;
       color: #333333;
@@ -51,6 +51,7 @@
   display: flex;
   padding: 16px;
   background-color: white;
+  cursor: pointer;
   &__image{
     margin-right: 8px;
   }
@@ -85,6 +86,13 @@
         padding: 2px 6px;
       }
     }
+  }
+  &__icon{
+    font-size: 20px;
+    font-weight: 400;
+    color: #333;
+    margin-top: 20px;
+    margin-left: 460px;
   }
 }
 
