--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -91,7 +91,8 @@
   - if user_signed_in? && @product.saler_id.present? && @product.buyer_id.nil?
     .box__container__current_user
       = link_to "商品の編集",edit_product_path,class:"box__container__current_user--edit"
-      %p or
+      .box__container__current_user--p
+        or
       = link_to "出品を一旦停止する","#",class:"box__container__current_user--stop"
       = link_to "この商品を削除する","/product/#{@product.id}",class:"box__container__current_user--delete"
 
