--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -383,6 +383,27 @@
   line-height: 1.4;
 }
 
+.box__container__current_user{
+  padding: 24px 40px 40px;
+  width: 700px;
+  margin: 40px auto 30px;
+  background: #fff;
+  display: block;
+  text-align: center;
+  &--edit{
+    @include submit;
+  }
+  &--p{
+    margin:10px 0px;
+  }
+  &--stop{
+    @include delete;
+    margin-bottom: 15px;
+  }
+  &--delete{
+    @include delete;
+  }
+}
 
 
 
