--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -129,6 +129,9 @@
   &__explanation{
     padding: 32px 0 0;
     line-height: 1.5;
+    &__content{
+      text-align: left;
+    }
   }
   &__good{
     display: flex;
@@ -403,6 +406,15 @@
   &--delete{
     @include delete;
   }
+}
+.box__container__current_buyer{
+  padding: 1px 40px 60px;
+  margin-bottom: 10px;
+  width: 700px;
+  margin: 0 auto;
+  background: #fff;
+  display: block;
+  text-align: center;
 }
 
 
