--- a/app/assets/stylesheets/create_address.scss
+++ b/app/assets/stylesheets/create_address.scss
@@ -23,6 +23,7 @@
       padding: 32px 64px;
       border-top: 1px solid #eee;
       &__facebook{
+        border-radius: 4px;
         text-align: center;
         background: #385185;
         color: #fff;
@@ -40,6 +41,8 @@
         }
       }
       &__google{
+        border: solid 1px black;
+        border-radius: 4px;
         text-align: center;
         background: white;
         color: black;
