--- a/app/assets/stylesheets/p_exhibiting.scss
+++ b/app/assets/stylesheets/p_exhibiting.scss
@@ -1,7 +1,7 @@
 // 出品ページの出品中のscssです。
 .u-products{
   .pmain{
-    width: calc(100vw - 620px);
+    width: 700px;
     background: #fafafa;
     font-size: 16px;
     &__top{
