--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -88,7 +88,33 @@
         =@product.price
       %span.box__container__price__tax ＜税込＞
       %span.box__container__price__fee 送料込み
+  - if user_signed_in? && current_user.id == @product.saler_id
+    .box__container__current_user
+      = link_to "商品の編集",edit_product_path,class:"box__container__current_user--edit"
+      .box__container__current_user--p
+        or
+      = link_to "出品を一旦停止する","#",class:"box__container__current_user--stop"
+      = link_to "この商品を削除する","/products/#{@product.id}",method:"delete",class:"box__container__current_user--delete"
 
+  - else
+    .box__container__current_buyer
+      = link_to "購入画面に進む",root_path,class:"box__container__price__btn"
+      .box__container__explanation
+        %p.box__container__explanation__content
+          =@product.description
+      .box__container__good
+        .box__container__good__left
+          = link_to root_path, class:"box__container__good__left__iine" do
+            %i.far.fa-heart
+            %span いいね
+            %span 0
+          = link_to root_path, class:"box__container__good__left__bad" do
+            %i.far.fa-flag
+            %span 不適切な商品の報告
+        .box__container__good__right
+          = link_to root_path class:"box__container__good__right__safe" do
+            %i.fas.fa-lock
+            %span あんしん・あんぜんへの取り組み
   .box__comment
     .box__comment__content
       .box__comment__content__main
