--- a/app/views/devise/registrations/index.html.haml
+++ b/app/views/devise/registrations/index.html.haml
@@ -10,7 +10,7 @@
       %h2 新規会員登録
       .cellphone__main__container__form
         .cellphone__main__container__form__inside
-          = link_to new_user_registration_path, method: :post, class: 'cellphone__main__container__form__inside__btn' do
+          = link_to new_user_registration_path,class: 'cellphone__main__container__form__inside__btn' do
             = icon 'far', 'envelope', class:"cellphone__main__container__form__inside__btn__icon"
             メールアドレスで登録する
           = link_to user_facebook_omniauth_authorize_path, class: 'cellphone__main__container__form__facebook' do
