--- a/app/assets/stylesheets/user_page.scss
+++ b/app/assets/stylesheets/user_page.scss
@@ -3,8 +3,8 @@
   width: 700px;
   &__user {
     height: 200px;
-    background-image: url(mypage-background.jpg);
-    background-size:cover;        
+    width: 700px;
+    background-size:cover;
     position: relative;
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
     cursor: pointer;
