--- a/app/assets/stylesheets/user_profile_edit.scss
+++ b/app/assets/stylesheets/user_profile_edit.scss
@@ -8,13 +8,16 @@
     text-align: center;
     padding: 8px 24px;
   }
-  
-  &__icon {
-    display: flex;
-    justify-content: center;
-    background-image: url(mypage-background.jpg);
-    background-size: cover;
-    padding: 72px 16px 24px;
+  &__edit{
+    &__icon {
+      // display: flex;
+      // justify-content: center;
+      height: 100%;
+      width: 100%;
+      display: inline;
+      background-size: cover;
+      padding: 72px 16px 24px;
+    }
     &__figure {
       display: inline-block;
       width: 60px;
