--- a/app/views/products/user_page.html.haml
+++ b/app/views/products/user_page.html.haml
@@ -9,6 +9,7 @@
       = render 'user_sidebar'  # ユーザマイページのサイドバーの部分テンプレートの呼び出し
       .contents
         .contents__user
+          = image_tag"mypage-background.jpg", class: "contents__user"
           .contents__user__icon
             = link_to "" 
             .contents__user__icon__figures
