--- a/app/views/products/user_profile_edit.html.haml
+++ b/app/views/products/user_profile_edit.html.haml
@@ -11,9 +11,10 @@
         .profiles
           .profiles__profile
             プロフィール
-          .profiles__icon
-            = image_tag("https://static.mercdn.net/images/member_photo_noimage_thumb.png", class: "profiles__icon__figure")
-            %input{type:"text", class: 'profiles__icon__form', placeholder: "例)AYA☆セール中", name: "nickname"}
+          .profiles__edit
+            = image_tag"mypage-background.jpg", class: "profiles__edit__icon"
+            = image_tag "https://static.mercdn.net/images/member_photo_noimage_thumb.png", class: "profiles__edit__figure"
+            %input{type:"text", class: 'profiles__edit__form', placeholder: "例)AYA☆セール中", name: "nickname"}
           .profiles__content
             %textarea{class: "profiles__content__setting", placeholder: "例）こんにちは☆ ご覧いただきありがとうございます！かわいいものやきれいめオフィスカジュアル中心に出品しています。服のサイズは主に9号です。気持ちよくお取引できるよう心がけていますので、商品や発送方法などご質問がありましたらお気軽にどうぞ♪"}
             %input{type: "hidden"}
